<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.WeatherFragment">

    <ProgressBar
        android:id="@+id/loading_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        android:background="#87CEEB">

        <TextView
            android:id="@+id/city_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_default"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="#330033"/>

        <TextView
            android:id="@+id/temperature_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temperature_default"
            android:textSize="48sp"
            android:textAlignment="center"
            android:layout_marginTop="32dp"
            android:textColor="#330033"/>

        <TextView
            android:id="@+id/weather_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weather_condition_default"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:textColor="#330033"/>
        <TextView
            android:id="@+id/wind_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wind_default"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:textColor="#330033"/>
        <TextView
            android:id="@+id/humidity_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/humidity_default"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:textColor="#330033"/>
        <TextView
            android:id="@+id/pressure_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pressure_default"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:textColor="#330033"/>
        <TextView
            android:id="@+id/air_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/air_quality_default"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:textColor="#330033"
        />


    </LinearLayout>

</RelativeLayout>